--- a/Actividad 4/index.html
+++ b/Actividad 4/index.html
@@ -26,6 +26,9 @@
         <section class="logo">
             <nav>
                 <div class="container">
+                    <div class="burger">
+                        <i class="fa-solid fa-bars fa-lg"></i>
+                    </div>
                     <div class="logitech">
                         <img src="img/Logitech_logo.svg" alt="Logitech">
                     </div>
@@ -57,18 +60,169 @@
                     <div class="img-container">
                         <img src="img/rally-bar-huddle-hpb-feature.webp">
                     </div>
+                    <a href=""><h2>Habilita tus salas pequeñas con video</h2></a>
+                    <p>
+                        Barra de video todo-en-uno para reuniones y salas pequeñas
+                    </p>
+                    <a href="" class="link">Descrubre rally bar huddle</a>
                 </article>
                 <article>
                     <div class="img-container">
                         <img src="img/logitech-sight-feature.webp">
                     </div>
+                    <a href=""><h2>Obtén una mejor perspectiva</h2></a>
+                    <p>
+                        Ve y escucha con claridad con una cámara de conferencias inteligente situada en la mesa de la sala
+                    </p>
+                    <a href="" class="link">Conoce logitech sight</a>
                 </article>
                 <article>
                     <div class="img-container">
                         <img src="img/brio-300-h390-hpb-white-feature.webp">
                     </div>
+                    <a href=""><h2>Luce tu estilo</h2></a>
+                    <p>
+                        Luce y suena natural en cada videollamada
+                    </p>
+                    <a href="" class="link">Descubrir brio 300</a><br>
+                    <a href="" class="link">Descubrir H390</a>
                 </article>
             </section>
+
+            <section class="grid-section">
+                <div class="container">
+                    <div class="grid-a">
+                        <div class="img">
+                            <img src="img/desktop_grey-mice-and-keyboards.webp">
+                            <div class="title">
+                                Mouse y teclados
+                            </div>
+                        </div>
+                    </div>
+                    <div class="grid-b">
+                        <div class="img">
+                            <img src="img/desktop-grey-mobile-devices-4.webp">
+                            <div class="title">
+                                Dispositivos Móviles
+                            </div>
+                        </div>
+                    </div>
+                    <div class="grid-c">
+                        <div class="img">
+                            <img src="img/desktop_grey-streaming.webp">
+                            <div class="title">
+                                Streaming
+                            </div>
+                        </div>
+                    </div>
+                    <div class="grid-d">
+                        <div class="img">
+                            <img src="img/desktop_grey-headsets.webp">
+                            <div class="title">
+                                Audifonos con microfono y audiculares
+                            </div>
+                        </div>
+                    </div>
+                </div>
+                <div class="points">
+                    <i class="fa-regular fa-circle fa-lg"></i>
+                    <i class="fa-solid fa-circle fa-lg"></i>
+                    <i class="fa-solid fa-circle fa-lg"></i>
+                </div>
+            </section>
         </div>
+
+        <section class="carrousel">
+            <div class="texto">
+                <div class="img">
+                    <img src="img/pcr-icon.webp">
+                </div>
+                <p>
+                    Plástico Renovado
+                </p>
+                    Del plástico reciclado a nuevas posibilidades.
+                <button>Plásticos reciclados posconsumo</button>
+            </div>
+            <div class="points2">
+                <i class="fa-regular fa-circle fa-lg"></i>
+                <i class="fa-solid fa-circle fa-lg"></i>
+                <i class="fa-solid fa-circle fa-lg"></i>
+                <i class="fa-solid fa-circle fa-lg"></i>
+                <i class="fa-solid fa-circle fa-lg"></i>
+                <i class="fa-solid fa-circle fa-lg"></i>
+                <i class="fa-solid fa-circle fa-lg"></i>
+            </div>
+        </section>
+
+        <footer>
+            <div class="container">
+                <div class="extra-info">
+                    <div class="about">
+                        <p>Acerca de</p>
+                        <ul>
+                            <a href=""><li>La historia de Logitech</li></a>
+                            <a href=""><li>Empleo</li></a>
+                            <a href=""><li>Inversiones</li></a>
+                            <a href=""><li>Blog</li></a>
+                            <a href=""><li>Prensa</li></a>
+                            <a href=""><li>Contacto</li></a>
+                        </ul>
+                    </div>
+                    <div class="values">
+                        <p>Valores</p>
+                        <ul>
+                            <a href=""><li>Impacto social</li></a>
+                            <a href=""><li>Sonstenibilidad</li></a>
+                            <a href=""><li>Reciclaje</li></a>
+                        </ul>
+                    </div>
+                    <div class="clients">
+                        <p>Clientes</p>
+                        <ul>
+                            <a href=""><li>Preferencias de correo electrónico</li></a>
+                        </ul>
+                    </div>
+                </div>
+                <hr size="1">
+                <div class="contacto">
+                    <div class="redes">
+                        <i class="fa-brands fa-facebook fa-2xl"></i>
+                        <i class="fa-brands fa-twitter fa-2xl"></i>
+                        <i class="fa-brands fa-instagram fa-2xl"></i>
+                    </div>
+                    <div class="contacto2">
+                        <div class="correo">
+                            <input type="email" placeholder="INGRESA TU DIRECCION DE CORREO ELECTRONICO">
+                            <button>></button>
+                        </div>
+                        <label><input type="checkbox">Sí, quiero recibir noticias y correos electrónicos de productos. Lee nuestra política de privacidad.</label>
+                    </div>
+                </div>
+                <div class="copy">
+                    <div class="copy2">
+                        <p>©2023 Logitech. Reservados todos los derechos</p>
+                        <div class="terms">
+                            <div class="term">Términos de uso</div>
+                            <div class="term">Política de privacidad web</div>
+                            <div class="term">Política de privacidad de productos</div>
+                            <div class="term">Mapa del sitio</div>
+                            <div class="term2">Configuración de cookies</div>
+                        </div>
+                    </div>
+                    <div class="lg">
+                        <i class="fa-solid fa-earth-americas"></i> México
+                    </div>
+                </div>
+            </div>
+        </footer>
+        
+        <a class="fixed-button">
+            <div class="msg">
+                <svg xmlns="http://www.w3.org/2000/svg" height="1em" viewBox="0 0 512 512">
+                    <path d="M64 0C28.7 0 0 28.7 0 64V352c0 35.3 28.7 64 64 64h96v80c0 6.1 3.4 11.6 8.8 14.3s11.9 2.1 16.8-1.5L309.3 416H448c35.3 0 64-28.7 64-64V64c0-35.3-28.7-64-64-64H64z"/>
+                </svg>
+            </div>
+        </a>
+
     </body>
 </html>
